# hf-plugin-markdown

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  VENDORING.md  manifest.json
.github/workflows/: plugin-release.yml
app/: MarkdownEditorSurface.tsx  MarkdownPanel.tsx  MarkdownSourceSurface.tsx  i18n.ts  index.tsx  markdown.css  package-lock.json  package.json  tailwind.css  tsconfig.json  vditorConfig.ts  vditorLocalAssets.ts  vendor.d.ts  vite.config.ts
app/host/: MarkdownRenderer.tsx  aichatStore.ts  appStore.ts  devkitDialogs.ts  i18n.ts  themeStore.ts  types.ts  useSidebarResize.ts
app/markdown/: AssistantSidebar.tsx  EditorContextMenu.tsx  FindBar.tsx  ImageLightbox.tsx  MarkdownHeader.tsx  ReaderSidebar.tsx  SectionTitle.tsx  codeHighlight.ts  editorActions.ts  findHighlight.ts  types.ts  utils.ts
app/scripts/: generate-vditor-assets.mjs
backend/: Cargo.toml
backend/src/: commands.rs  lib.rs
src/ts/ir/: index.ts
src/ts/markdown/: codeRender.ts
src/ts/sv/: index.ts
src/ts/wysiwyg/: renderDomByMd.ts  showCode.ts
