[package]
name = "hf-plugin-markdown"
version = "0.1.0"
edition = "2021"
description = "HaloForge built-in Markdown Workspace plugin (backend)"

[lib]
name = "hf_plugin_markdown"
crate-type = ["cdylib", "rlib"]

[dependencies]
hf-plugin-api.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"