[package]
name = "hf-plugin-markdown"
version = "0.2.2"
edition = "2021"
description = "HaloForge built-in Markdown Workspace plugin (backend)"

[lib]
name = "hf_plugin_markdown"
crate-type = ["cdylib", "rlib"]

[dependencies]
hf-plugin-api = { package = "haloforge-plugin-api", version = "0.2.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
[workspace]
